--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Terelita Café</title>
+    <meta 
+      name="google-site-verification" 
+      content="nS468Vja-P41T9wdXpWHuMJr9DI-EiC6Pjwo9Xeq3Jo" 
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
