--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Terelita Café</title>
+    <title>Café Terelita</title>
     <meta 
       name="google-site-verification" 
       content="nS468Vja-P41T9wdXpWHuMJr9DI-EiC6Pjwo9Xeq3Jo" 
